--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
   }
   #name{
     margin-top: 20vh;
-    font-size: 100px;
+    font-size: 140px;
     font-weight: 600;
   }
     </style>
 </head>
 <body>
     <div id="container">
-        <div id="name">재희야 게임하지말고 공부해라</div>
+        <div id="name">재희야 공부해라</div>
     </div>
 </body>
 </html>
